--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -2,6 +2,6 @@
 {% block content %}
 <div class="text-center mt-5">
   <h1>Welcome to the Django Quiz App!</h1>
-  <p>Please <a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a> to continue.</p>
+  <p>Please <a href="{% url 'login' %}">Login here</a> or <a href="{% url 'register' %}">Register</a> to continue.</p>
 </div>
 {% endblock %}
